--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -117,7 +117,7 @@
         
         .bs-example-wrap{ display: inline-block; }
         .bs-example-block{ display: block; }
-        .result-form-panel{ display: none; border: 1px solid #ddd; text-align:center; padding:10px; margin:10px auto; width:90%; }
+        .result-form-panel{ border: 1px solid #ddd; text-align:center; padding:10px; margin:10px auto; width:90%; }
         .table-h{ color: blue; font-weight: bold; }
         .table-h td{ width:20%; }
         .result-form-panel table{ width:100%; border:1px solid #ccc; border-collapse: collapse; }
@@ -418,12 +418,70 @@
       </div>
 
       <div class="demo-panel form-demo" v-show="showType == 3">
-        <p>登高参赛报名申请， 提交表单：1~3；超过一张表单提交的成员会成为一队，不足3人则与其他队伍随机匹配</p>
-        <h1 class="form-demo">3.提交表单(vue)</h1>
-        
-        <div class="speeddial  add-btn" draggable="true" data-handler="speeddial">
-          <div class="speeddial-inner">
-            <div class="addBtn-icon">+</div>
+
+        <div class="add-form-panel" v-show="demo3.step == 1">
+          <p>登高参赛报名申请， 提交表单：1~3；超过一张表单提交的成员会成为一队，不足3人则与其他队伍随机匹配</p>
+          <h1 class="form-demo">3提交表单(vue)</h1>
+          <div class="bs-example-wrap">
+            <div class="bs-example" data-no="1">
+              <form id="bsForm1">
+                <div class="form-group">
+                  <label for="name">姓名:</label>
+                  <input class="form-control" name="userName" placeholder="填写姓名">
+                </div>
+                <div class="form-group">
+                  <label for="sex">性别:</label>
+                  <div class="sex-radios">
+                    <label>
+                      <input type="radio" name="sex" value="男" checked>
+                      男
+                    </label>
+                    <label>
+                      <input type="radio" name="sex" value="女">
+                      女
+                    </label>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label>工号:</label>
+                  <input class="form-control" name="jobId" placeholder="填写工号">
+                </div>
+                <div class="form-group">
+                  <label>身份证号:</label>
+                  <input class="form-control" name="userId" placeholder="填写身份证">
+                </div>
+                <div class="form-group">
+                  <label>手机号:</label>
+                  <input class="form-control" name="mobile" placeholder="填写手机号">
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div class="speeddial  add-btn" title="新增表单" v-on="click: addForm()">
+            <div class="speeddial-inner">
+              <div class="addBtn-icon">+</div>
+            </div>
+          </div>
+
+          <div>
+            <input class="btn332 btn_reg_1" readonly="true" value="提交" v-on="click: demo3.step = 2">
+          </div>
+        </div>
+        <div class="result-form-panel" v-show="demo3.step == 2">
+          <h1>提交成功</h1>
+          <table class="table-panel" id="table_2">
+            <tr class="table-h">
+              <td>姓名</td>
+              <td>性别</td>
+              <td>工号</td>
+              <td>身份证</td>
+              <td>手机号</td>
+            </tr>
+          </table>
+
+          <div>
+            <input class="btn332 btn_reg_1" readonly="true" v-on="click: demo3.step = 1" value="返回">
           </div>
         </div>
       </div>
@@ -498,6 +556,7 @@
       </div>
 
       <script type="text/javascript" src="./vue.js"></script>
+      <script type="text/javascript" src="../utils/base.js"></script>
       <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
 
       <script type="text/javascript">
@@ -509,10 +568,11 @@
         function init() {
           var vm = null;
 
-          // 阻止默认事件(原生js)
-          function preventDefault() {
-            event.preventDefault();
-            event.stopPropagation();
+          // 阻止默认事件(原生js) 
+          function preventDefault(event) {
+            var event = EventUtil.getEvent();
+            EventUtil.preventDefault(event);
+            EventUtil.stopPropagation(event);
             return false;
           }
 
@@ -527,7 +587,7 @@
           vm = new Vue({
             el: 'body',
             data: {
-              showType: 3.1,
+              showType: 3,
               demo1: {
                 'step': 1,
                 'regStep': 1
@@ -543,7 +603,8 @@
                 'totalPrice': 0
               },
               demo3: {
-
+                'step': 1,
+                formList: []
               }
             },
             methods: {
@@ -588,6 +649,9 @@
               submitOrder: function(event) {
                 this.demo2.step = 3;
                 preventDefault(event);
+              },
+              addForm: function() {
+                console.log('新增表单！');
               }
             },
             // 监听 某属性变换
@@ -828,6 +892,8 @@
               this.$addFormPanel = $('#formDemo').find('#addFormPanel');
               this.$resultForm = $('#formDemo').find('#resultForm');
               this.$backBtn = $('#formDemo').find('#backForm');
+
+              this.$resultForm.hide();
               this.initEvt();
             },
             initEvt: function() {
