添加窗口变化代码

--- a/EcmaScript6.html
+++ b/EcmaScript6.html
@@ -13,7 +13,9 @@
     <body>
       <h3>ECMAScript6 理解</h3>
       <script>
-                
+          // 教程网址：http://es6.ruanyifeng.com/#README
+          // 教程网址：http://www.cnblogs.com/Wayou/p/es6_new_features.html#home
+          
       </script>
     </body>
 </html>
