--- a/vue/extrendDemo.html
+++ b/vue/extrendDemo.html
@@ -16,7 +16,7 @@
       <script type="text/javascript">
         // require 需要依赖相应的 commonjs 库， 例如require.js(后期引入 require.js实现)
         // test.js
-        var myMixin = require('./mixin')
+        var myMixin = require('./mixin');
         var Component = Vue.extend({
           mixins: [myMixin]
         })
