--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -74,6 +74,12 @@
           .u-face-pop .triangle-ico { position:absolute; bottom:-16px; left:88px; width: 0; height: 0; border-style: solid; border-width: 15px 10px 0 10px; border-color: #007bff transparent transparent transparent; }
         
           /*文字双击选中默认事件去除*/
+          /*IE6-9还没发现相关的CSS属性
+            需要在html标签添加事件
+            document.body.onselectstart = document.body.ondrag = function(){
+            return false;
+            }
+          */
           .cant-selected{ -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; -ms-user-select:none; }
         </style>
 
