新增commonjs amd协议学习demo

--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -116,6 +116,8 @@
         .btn-default:hover{color: #333;background-color: #e6e6e6;border-color: #adadad;}
         
         .bs-example-wrap{ display: inline-block; }
+        .bs-example-wrap-v{ display: block; width:1115px; }
+        .add-btn-wrap{ display:inline-block; width:480px; padding: 25px 15px 15px 0px;margin: 15px 15px 15px 0px;}
         .bs-example-block{ display: block; }
         .result-form-panel{ border: 1px solid #ddd; text-align:center; padding:10px; margin:10px auto; width:90%; }
         .table-h{ color: blue; font-weight: bold; }
@@ -423,8 +425,8 @@
           <p>登高参赛报名申请， 提交表单：1~3；超过一张表单提交的成员会成为一队，不足3人则与其他队伍随机匹配</p>
           <h1 class="form-demo">3提交表单(vue)</h1>
 
-          <div class="bs-example-wrap">
-            <div class="bs-example" data-no="1">
+          <div class="bs-example-wrap-v">
+            <div class="bs-example">
               <form id="bsForm1">
                 <div class="form-group">
                   <label for="name">姓名:</label>
@@ -457,11 +459,13 @@
                 </div>
               </form>
             </div>
-          </div>
-
-          <div class="speeddial  add-btn" title="新增表单" v-on="click: addForm()">
-            <div class="speeddial-inner">
-              <div class="addBtn-icon">+</div>
+            
+            <div class="add-btn-wrap">
+              <div class="speeddial  add-btn" title="新增表单" v-on="click: addForm()">
+                <div class="speeddial-inner">
+                  <div class="addBtn-icon">+</div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -683,7 +687,7 @@
         // jquery 代码
         $(function(){
 
-          // 模块化js写法(2.1 )
+          // 购物列表(2.1 )
           var BuyList = {
             // 头部定义模块变量
             $buyList: null,
