完成 vue 表单逻辑代码

--- a/canvas.html
+++ b/canvas.html
@@ -94,7 +94,7 @@
 
       <div id='comp'>
         <h3>绘制合成: globalAlpha globalCompositionOperation</h3>
-        <p><em>ps:</em>更新信息查看<a href="https://developer.mozilla.org/samples/canvas-tutorial/6_1_canvas_composite.html" target="_blank">火狐实验室</a></p>
+        <p><em>ps:</em>更多信息查看<a href="https://developer.mozilla.org/samples/canvas-tutorial/6_1_canvas_composite.html" target="_blank">火狐实验室</a></p>
         <canvas height="800" width="800">浏览器不支持Canavas</canvas>
         <div id="cmpList"></div>
       </div>
