--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -116,7 +116,7 @@
         .btn-default:hover{color: #333;background-color: #e6e6e6;border-color: #adadad;}
         
         .bs-example-wrap{ display: inline-block; }
-        .bs-example-wrap-v{ display: block; width:1115px; }
+        .bs-example-wrap-v{ display: block; width:1115px; text-align:justify; }
         .add-btn-wrap{ display:inline-block; width:480px; padding: 25px 15px 15px 0px;margin: 15px 15px 15px 0px;}
         .bs-example-block{ display: block; }
         .result-form-panel{ border: 1px solid #ddd; text-align:center; padding:10px; margin:10px auto; width:90%; }
@@ -426,41 +426,41 @@
           <h1 class="form-demo">3提交表单(vue)</h1>
 
           <div class="bs-example-wrap-v">
-            <div class="bs-example">
+            <div class="bs-example" v-repeat="formData in demo3.formList">
               <form id="bsForm1">
                 <div class="form-group">
                   <label for="name">姓名:</label>
-                  <input class="form-control" name="userName" placeholder="填写姓名">
+                  <input class="form-control" v-model="formData.userName" name="userName" placeholder="填写姓名">
                 </div>
                 <div class="form-group">
                   <label for="sex">性别:</label>
                   <div class="sex-radios">
                     <label>
-                      <input type="radio" name="sex" value="男" checked>
+                      <input type="radio" name="sex" value="男" v-model="formData.sex" checked>
                       男
                     </label>
                     <label>
-                      <input type="radio" name="sex" value="女">
+                      <input type="radio" name="sex" value="女" v-model="formData.sex">
                       女
                     </label>
                   </div>
                 </div>
                 <div class="form-group">
                   <label>工号:</label>
-                  <input class="form-control" name="jobId" placeholder="填写工号">
+                  <input class="form-control" name="jobId" v-model="formData.jobId" placeholder="填写工号">
                 </div>
                 <div class="form-group">
                   <label>身份证号:</label>
-                  <input class="form-control" name="userId" placeholder="填写身份证">
+                  <input class="form-control" name="userId" v-model="formData.userId" placeholder="填写身份证">
                 </div>
                 <div class="form-group">
                   <label>手机号:</label>
-                  <input class="form-control" name="mobile" placeholder="填写手机号">
+                  <input class="form-control" name="mobile" v-model="formData.mobile" placeholder="填写手机号">
                 </div>
               </form>
             </div>
             
-            <div class="add-btn-wrap">
+            <div class="add-btn-wrap" v-show="demo3.formList.length < 3">
               <div class="speeddial  add-btn" title="新增表单" v-on="click: addForm()">
                 <div class="speeddial-inner">
                   <div class="addBtn-icon">+</div>
@@ -483,6 +483,13 @@
               <td>工号</td>
               <td>身份证</td>
               <td>手机号</td>
+            </tr>
+            <tr class="user-tr" v-repeat="formData in demo3.formList">
+              <td v-text="formData.userName"></td>
+              <td v-text="formData.sex"></td>
+              <td v-text="formData.jobId"></td>
+              <td v-text="formData.userId"></td>
+              <td v-text="formData.mobile"></td>
             </tr>
           </table>
 
@@ -610,7 +617,7 @@
               },
               demo3: {
                 'step': 1,
-                formList: []
+                formList: [{'userName':'', 'sex':'男', 'jobId':'', 'userId':'', 'mobile': ''}]
               }
             },
             methods: {
@@ -657,7 +664,15 @@
                 preventDefault(event);
               },
               addForm: function() {
-                console.log('新增表单！');
+                var formObj = {
+                  'userName':'',
+                  'sex':'',
+                  'userId': '',
+                  'jobId':'',
+                  'mobile':''
+                };
+                // 新增表单数据
+                this.demo3.formList.push(formObj);
               }
             },
             // 监听 某属性变换
