--- a/Date.html
+++ b/Date.html
@@ -56,6 +56,8 @@
           // 浏览器兼容初始化日期写法
           var data1 = new Date('2015-10-26'); // IE9+ , chrome support
           var data2 = new Date('2015/10/26'); // all support
+          // var data2 = new Date('2015/10/2'); // 支持单数字写法
+
           console.log("data1: " + data1);
           console.log("data2: " + data2);
         }
