--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -85,6 +85,15 @@
           .box-wrap{width:50%; padding:20px; margin:20px auto; background-color:#f0f3f9; text-align:justify;}
           .list{width:250px; height:120px; display:inline-block; margin-bottom:20px; text-align:center; vertical-align:top; background-color: #000; }
           .justify-fix{display:inline-block; width:100%; height:0; overflow:hidden;}
+
+          /* padding border margin与 宽度关系探讨 */
+          .t-padding-wrap{ height:100px; width:200px; background-color:#ccc; padding:20px; }
+          .t-border-wrap{ height:100px; width:200px; background-color:#ccc; border:5px solid #555; }
+          .t-margin-wrap{ height:100px; width:200px; background-color:#ccc; margin:20px; }
+          .t-w-parent{ height:100px; width:200px; }
+          .t-padding-wrap2{ background-color:#ccc; padding:20px; height:100%; }
+          .t-border-wrap2{ background-color:#ccc; border:5px solid #555; height:100%; }
+          .t-margin-wrap2{ background-color:#ccc; margin:20px; height:100%; }
         </style>
 
     </head>
@@ -98,7 +107,8 @@
         <button id="tBtn4" data-id="test4" class="radius-btn">多栏布局</button>
         <button id="tBtn5" data-id="test5" class="radius-btn">媒体查询</button>
         <button id="tBtn6" data-id="test6" class="radius-btn">css三角形</button>
-        <button id="tBtn7" data-id="test7" class="radius-btn">文字两端对齐</button>
+        <button id="tBtn7" data-id="test7" class="radius-btn">两端对齐</button>
+        <button id="tBtn8" data-id="test8" class="radius-btn">盒子宽度实验</button>
       </div>
 
       <div id='test1' class="demo demo2">
@@ -187,6 +197,24 @@
         <span class="list"></span>
         <span class="list"></span>
         <span class="justify-fix"></span>
+      </div>
+
+      <div id="test8" class="demo">
+        <h1>padding margin border影响宽度对比</h1>
+        <div class="t-padding-wrap"></div>
+        <div class="t-border-wrap"></div>
+        <div class="t-margin-wrap"></div>
+        <h1>让padding border的盒子宽高相同</h1>
+        <div class="t-w-parent">
+          <div class="t-padding-wrap2">adsf</div>
+        </div>
+        <div class="t-w-parent">
+          <div class="t-border-wrap2">adf</div>
+        </div>
+        <div class="t-w-parent">
+          <div class="t-margin-wrap2">adf</div>
+        </div>
+
       </div>
       
       <script src="utils/base.js" type="text/javascript"></script>
