--- a/prototype.html
+++ b/prototype.html
@@ -34,7 +34,9 @@ http://www.w3.org/TR/html4/frameset.dtd"> -->
       <title>
           原型理解
       </title>
-
+      <!-- 关于favicon.ico的两三事 http://www.cnblogs.com/LoveJenny/archive/2012/05/22/2512683.html -->
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     
     <body>
