--- a/scope.html
+++ b/scope.html
@@ -67,6 +67,11 @@
           }
 
           // 笔试题2
+          // 对于apply和call两者在作用上是相同的，但两者在参数上有区别的。
+          // 对于第一个参数意义都一样，但对第二个参数：
+          // apply传入的是一个参数数组，也就是将多个参数组合成为一个数组传入，而call则作为call的参数传入（从第二个参数开始）。
+          // 如 func.call(func1,var1,var2,var3)对应的apply写法为：func.apply(func1,[var1,var2,var3])
+
           var name = "The Window";
           function test2(){
             var object = {
