--- a/EcmaScript5.html
+++ b/EcmaScript5.html
@@ -27,7 +27,7 @@
           var ecma5Demo = {
             init: function(){
               var This = this;
-              this.demo1();
+              // this.demo1();
             },
             demo1: function(){
               // 临时包装对象 成功
@@ -47,6 +47,14 @@
               var falseValue=false;
               alert(falseObject instanceof Boolean); //true
               alert(falseValue instanceof Boolean); //false
+            },
+            consoleDemo: function(){
+              // 不建议在开发时使用console.log 的原因在于， 在低版本浏览器包括IE8(ie6 ie7)使用会出问题；
+              // IE6 IE7 浏览器没改方法 执行该语句会报错
+              // IE8 开始支持该方法， 但console.log({a:'adf'}); 这类型 对象类型不能正常输出，而且会引起其他莫名问题
+
+              // console.log 属于BOM 对象方法， 以前的浏览器实现其没有统一规范所致；
+              console.log('旧版本 IE 浏览器对console.log支持很不好！');
             }
           };
           ecma5Demo.init();
