--- a/challenge_case/slide_optimize.html
+++ b/challenge_case/slide_optimize.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>jquery 滚动优化</title>
+    <title>jquery 公告滚动优化</title>
     <link type="text/css" href="../common.css" rel="stylesheet"/>
     <style type="text/css">
        .box_wrap{ color:#fff; position: relative; width: 480px; height: 85px; border-radius: 6px; margin-top: 10px; overflow: hidden; }
@@ -12,7 +12,7 @@
         
         .normalHeadLine_div { position: absolute; top: 0; }
         .normalHeadLine_div ul{ margin:8px 0px; }
-        .normalHeadLine_div .list { padding: 0 0 0 8px; height: 25px; }
+        .normalHeadLine_div .list { padding: 0 0 0 8px; height: 25px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -22,23 +22,23 @@
         <div id="head_line_id" class="head_line_mod">
             <div class="normalHeadLine_div">
                 <ul>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
-                    <li class="list">测试的一段小蚊子...</li>
+                    <li class="list">1.测试的一段小蚊子...</li>
+                    <li class="list">2.测试的一段小蚊子...</li>
+                    <li class="list">3.测试的一段小蚊子...</li>
+                    <li class="list">4.测试的一段小蚊子...</li>
+                    <li class="list">5.测试的一段小蚊子...</li>
+                    <li class="list">6.测试的一段小蚊子...</li>
+                    <li class="list">7.测试的一段小蚊子...</li>
+                    <li class="list">8.测试的一段小蚊子...</li>
+                    <li class="list">9.测试的一段小蚊子...</li>
+                    <li class="list">10.测试的一段小蚊子...</li>
+                    <li class="list">11.测试的一段小蚊子...</li>
+                    <li class="list">12.测试的一段小蚊子...</li>
+                    <li class="list">13.测试的一段小蚊子...</li>
+                    <li class="list">14.测试的一段小蚊子...</li>
+                    <li class="list">15.测试的一段小蚊子...</li>
+                    <li class="list">16.测试的一段小蚊子...</li>
+                    <li class="list">17.测试的一段小蚊子...</li>
                 </ul>
             </div>
         </div>
@@ -50,8 +50,7 @@
         $(function(){
             // 优化思路： http://developer.51cto.com/art/201504/473422.htm
             // 自动滚动（每隔5秒向上滚动）效果，只有滚动条数大于2时滚动；
-            // 鼠标放置上面停止滚动，移开继续滚动；
-
+            // 鼠标放置上面停止滚动，移开继续滚动；(尽量不遍历 节点)
             var slideObj = {
                 $headLineWrap:null,
                 init: function(){
@@ -60,38 +59,56 @@
                 },
                 initEvt:function(){
                     var $ulWrap = this.$headLineWrap.find('.normalHeadLine_div'),
-                        slideUp_count = 1,
                         dataLen = $ulWrap.find('li').length,
                         top = 0,
-                        slideTimeOut = 0;
+                        slideUp_count = 1,
+                        slideTimeOut;
 
                     if ( dataLen > 2 ){
                         clearTimeout(slideTimeOut);
                         slideUp();
                     }
-
+                    // chrome 1 ~ 4
                     function slideUp(){
                         var $hadShowDom = '';
+                        top -= 25*2;
+                        if (slideTimeOut) {
+                            clearTimeout(slideTimeOut);
+                        }
+                        slideTimeOut = setTimeout(function(){
+                            $ulWrap.animate({
+                                'top': top
+                            }, 1000, function(){
+                                // 已移动的节点拼接到最后
+                                $ulWrap.find('ul').append( $ulWrap.find('li:lt(2)') );
+                                top = 0;
+                                $ulWrap.css({'top': top});
+                                slideUp();
+                            });
+                        }, 5 * 1000);
+                    }
+                    // chrome cpu 1 ~ 3
+                    function slideUp2(){
+                        var $hadShowDom = '', hadShowIndex;
                         // 当已滚动条数超过一半时自动切换
                         if ( slideUp_count > parseInt(dataLen/2, 10) ){
+                            hadShowIndex = Math.floor(dataLen/2);
                             // 将已向上移动的节点移动至最下面
-                            $hadShowDom = $ulWrap.find('li.had_show');
+                            $hadShowDom = $ulWrap.find('li:lt(' + hadShowIndex + ')');
                             // 如果append的是自己子类，则移动其位置
                             $ulWrap.find('ul').append($hadShowDom);
                             $hadShowDom.removeClass('had_show');
                             slideUp_count = 1;
                             $ulWrap.css('top', 0);
+                            top = 0;
                         }
-                        top = parseInt($ulWrap.css('top'), 10);
                         top -= 25*2;
                         slideTimeOut = setTimeout(function(){
                             $ulWrap.animate({
                                 'top': top
                             }, 1000, function(){
-                                $ulWrap.find('li').eq(slideUp_count - 1).addClass('had_show');
-                                $ulWrap.find('li').eq(slideUp_count).addClass('had_show');
                                 slideUp_count += 2;
-                                slideUp();
+                                slideUp2();
                             });
                         }, 5 * 1000);
                     }
