--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -571,6 +571,7 @@
 
       <script type="text/javascript" src="./vue.js"></script>
       <script type="text/javascript" src="../utils/base.js"></script>
+      <!-- // <script type="text/javascript" src="../lib/jquery-1.8.3.min.js"></script> -->
       <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
 
       <script type="text/javascript">
