--- a/webStorage.html
+++ b/webStorage.html
@@ -4,6 +4,11 @@
       <meta name="renderer" content="webkit">
       <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1"/>
       <meta http-equiv="content-type" content="charset=utf-8">
+      <!-- meta 详细信息 http://www.wzsky.net/html/Website/htmlcss/116165.html -->
+      <!-- 设置所有缓存无效 -->
+      <meta http-equiv="Expires"   CONTENT="0">
+      <meta http-equiv="Cache-Control"   CONTENT="no-cache">
+      <meta http-equiv="Pragma"   CONTENT="no-cache">
       <title>
         浏览器缓存理解
       </title>
