--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -219,7 +219,12 @@
       
       <script src="utils/base.js" type="text/javascript"></script>
       <script>
-        
+        // CSS没有发布的概念，俗称是标准规范，实际上只是个建议，并不是强制执行的，W3C也只不过是个民间组织。
+        // 至于CSS3何时确定的，反正CSS2.1是今年6月7日最终定稿的。
+        // CSS3不是解决CSS2的问题，而是新的标准特性，不是补丁。
+        // 而且刚才说了，只是建议，浏览器厂商没有义务遵守，就算遵守的了，也需要更新版本逐步完善，就算完善了，也得用户升级才行。
+        // 而且这是个循序渐进的过程，不是说新的出来旧的就不用了。
+
         init();
 
         // 启动函数
