--- a/webStorage.html
+++ b/webStorage.html
@@ -45,7 +45,10 @@
       <!-- 引入公用自定义文件，其包含cookie封装对象 -->
       <script type="text/javascript" src="utils/cookieUtil.js"></script>
       <script>
-        
+        // 不是很准确的总结： 
+        // 1.localStorage 是html5 规范，IE8就支持了，不同浏览器总大小不同，大概为5MB； 
+        // 2.cookie 比较老的缓存实现方式，不同浏览器支持的cookie 个数跟容量不同，容量大概4K;（http://www.cnblogs.com/henryhappier/archive/2011/03/03/1969564.html）
+
         var xq = {};
         init();
 
