--- a/EcmaScript5.html
+++ b/EcmaScript5.html
@@ -53,6 +53,7 @@
               // 不建议在开发时使用console.log 的原因在于， 在低版本浏览器包括IE8(ie6 ie7)使用会出问题；
               // IE6 IE7 浏览器没该方法 执行该语句会报错
               // IE8 开始支持该方法， 但console.log({a:'adf'}); 这类型 对象类型不能正常输出，而且会引起其他莫名问题
+              // 更多console 信息： http://www.cnblogs.com/leejersey/archive/2012/11/27/2790998.html
 
               // console.log 属于BOM 对象方法， 以前的浏览器实现其没有统一规范所致；
               console.log('旧版本 IE 浏览器对console.log支持很不好！');
